evaluation/test_suite/positive/1.c
#include <stdio.h>
int main()
{
    return 1 + *(int*)NULL;
}
