evaluation/test_suite/negative/ub18/2.c
#include <stdio.h>

int main()
{
    int* p = NULL;
    (void)p;
}
